# PGN-Streaming-Simulator

./: .gitignore  README.md  config.yaml  pyproject.toml  run.sh  start_server.sh
pgn_output/: board_1.pgn
src/pgncs/: __init__.py  config.py  game.py  main.py  manager.py  pgn_server.py  writer.py
